2005-08-14  dmolavi  <dari@nukedgallery.net>
	UPDATE:
	  * Updated README file for RC-1.  Better late than never...

2005-08-10  dmolavi  <dari@nukedgallery.net>
	FIX:
	  * Sidebar did not include G2 CSS. This fix takes care of that,
	    but invalidates the HTML that is generated, since the CSS
	    link tag is included within the body of the page.  Doesn't 
	    matter anyway, since PHPNuke's HTML is light years from valid 
	    to begin with.

2005-08-04  dmolavi  <dari@nukedgallery.net>
	NEW:
	  * German language file
	FIX:
	  * Changelog format
	
2005-08-02  dmolavi  <dari@nukedgallery.net>
	NEW:
 	  * Added ChangeLog to repository.

2005-08-01  dmolavi  <dari@nukedgallery.net>
	UPDATE:
	  * Another minor update to sidebar block code.

2005-08-01  dmolavi  <dari@nukedgallery.net>
	FIX:
	  * Fixed borked CVS commit in index.php and minor update to sidebar
	    code.

2005-07-27  dmolavi  <dari@nukedgallery.net>
	* Stupid me, forgot to add image block to repository

2005-07-27  dmolavi  <dari@nukedgallery.net>
	* UPDATE:
	    - Update Readme.html with new admin options
		- Add proper versioning info to top of each file
		- Language file updates NEW:
		- Image block now works :)
		- Sidebar block now works :)

2005-07-27  dmolavi  <dari@nukedgallery.net>
	* NEW:
	   - New readme file in HTML format.

2005-07-27  dmolavi  <dari@nukedgallery.net>
	* FIX:
	   - Got the sidebar working for a random image.
	   - Added embedPath to GalleryEmbed::init() calls
	   - Minor updates in admin.php file

2005-07-25  dmolavi  <dari@nukedgallery.net>
	* doh..forgot the README update

2005-07-25  dmolavi  <dari@nukedgallery.net>
	* UPDATE:
	   - Added cookie path to admin setup
	   - Added check to verify Gallery2 is installed, not just copied to a
             directory.
	   - Updated language files.
	   - Updated sidebar capabilities.

2005-07-20  dmolavi  <dari@nukedgallery.net>
	* FIX: 
	   - Updated incorrect embedUri usage 
	* NEW: 
	   - admin setup page now