@@ -293,6 +293,43 @@
 			</p>
 		</div>
 		</p>
+		<p>
+		By default, the Gallery 2 installation will be installed in html/modules/gallery2/. 
+		If you decide to change the name of your Gallery 2 directory (ie, to just "Gallery"), then 
+		you must make the following changes:<br />
+		<div class="instructions">
+			<h3>In html/modules/gallery2/admin/language/lang-xxxxx.php</h3>
+			<p>
+			You will need to update the following line:
+			define("MOD_NAME","gallery2");
+			Change "gallery2" to whatever you renamed your Gallery 2 installation directory to.
+			</p>
+		</div>
+		<div class="instructions">
+			<h3>In html/admin/case/case.gallery2.php and html/modules/gallery2/admin/case.gallery2.php</h3>
+			<p>
+			You will need to update the following line:
+			$module_name = "gallery2";
+			Change "gallery2" to whatever you renamed your Gallery 2 installation directory to.
+			</p>
+		</div>
+		<div class="instructions">
+			<h3>In html/blocks/block-G2_ImageBlock.php and html/blocks/block-G2_Sidebar.php</h3>
+			<p>
+			You will need to update the following line:
+			include("modules/gallery2/gallery2.cfg");
+			Change "gallery2" to whatever you renamed your Gallery 2 installation directory to.
+			</p>
+		</div>
+		<div class="instructions">
+			<h3>In html/modules/gallery2/index.php</h3>
+			<p>
+			You will need to update the following line:
+			define("MOD_NAME","gallery2");
+			Change "gallery2" to whatever you renamed your Gallery 2 installation directory to.
+			</p>
+		</div>
+		</p>
 		<h2>
 		<a name="configuration">
 		Configuration
